# newell

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ADMIN-GUIDE.md  RUNBOOK-p1.md  RUNBOOK-p2.md  RUNBOOK-p3.md
docs/superpowers/plans/: 2026-07-12-p0-foundation.md  2026-07-12-p1-auth-profile-web.md  2026-07-13-p2-plantcare-guest.md  mytesting.md
docs/superpowers/specs/: 2026-07-12-newell-platform-design.md
infra/: .env.example  docker-compose.local.yml  docker-compose.yml
libs/newell_common/: pyproject.toml
libs/newell_common/src/newell_common/: __init__.py  config.py  db.py  errors.py  health.py  i18n.py  logging.py  repository.py  security.py
locales/: bn.json  en.json
services/ai_gateway/: Dockerfile  Dockerfile.local  pyproject.toml
services/ai_gateway/src/ai_gateway/: deps.py  main.py  plantdoctor.py  provider.py  roomdesigner.py  routes.py  schemas.py
services/auth/: Dockerfile  Dockerfile.local  pyproject.toml
services/auth/src/auth/: db_init.py  deps.py  main.py  models.py  repositories.py  routes.py  schemas.py  service.py  sms.py
services/gateway/: Dockerfile  Dockerfile.local  pyproject.toml
services/gateway/src/gateway/: auth_dep.py  main.py  middleware.py  proxy.py
services/interior/: Dockerfile  Dockerfile.local  pyproject.toml
services/interior/src/interior/: client.py  db_init.py  deps.py  main.py  models.py  repositories.py  routes.py  schemas.py  service.py
services/media/: Dockerfile  Dockerfile.local  pyproject.toml
services/media/src/media/: deps.py  main.py  routes.py  schemas.py  service.py  storage.py
services/plantcare/: Dockerfile  Dockerfile.local  pyproject.toml
services/plantcare/src/plantcare/: client.py  db_init.py  deps.py  main.py  models.py  repositories.py  routes.py  schemas.py  service.py
services/profile/: Dockerfile  Dockerfile.local  pyproject.toml
services/profile/src/profiles/: db_init.py  deps.py  main.py  models.py  repositories.py  routes.py  schemas.py  service.py
tests/ai_gateway/: test_design.py  test_diagnose.py
tests/auth/: test_guest.py  test_otp_flow.py  test_refresh.py
tests/common/: test_config.py  test_errors.py  test_i18n.py  test_logging.py  test_repository.py  test_security.py
tests/gateway/: test_health.py  test_proxy.py  test_proxy_p2.py
tests/interior/: test_rooms.py
tests/media/: test_upload.py
tests/plantcare/: test_plants.py
tests/profile/: test_profile.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: App.tsx  api.ts  auth.tsx  index.css  main.tsx  prefs.tsx  theme.ts
web/src/components/: Button.tsx  DiagnosisCard.tsx  GrowthStem.tsx  RoomDesignCard.tsx  SignupGate.tsx
web/src/landing/: LandingBackground.tsx  content.ts  icons.tsx
web/src/screens/: GardenScreen.tsx  LandingScreen.tsx  OtpScreen.tsx  PhoneScreen.tsx  ProfileScreen.tsx  RoomsScreen.tsx  UploadRoomScreen.tsx  UploadScreen.tsx
