[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newell-interior"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "newell-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
