[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newell-media"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "newell-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart",
    "minio",
]

[tool.setuptools.packages.find]
where = ["src"]
