[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newell-profile"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "newell-common",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "asyncpg",
    "aiosqlite",
]

[tool.setuptools.packages.find]
where = ["src"]
